Fix alignements, responsive mobile, stepper, sidebar sticky 39

--- a/pretix-modern-theme/pretix_modern_theme/static/pretix_modern_theme/modern.css
+++ b/pretix-modern-theme/pretix_modern_theme/static/pretix_modern_theme/modern.css
@@ -430,8 +430,8 @@ article.product-row.variation.row {
 }
 
 /* Price and availability alignment */
-article.product-row .price        { text-align: right; padding-right: 30px !important; }
-article.product-row .availability-box { text-align: right; padding-left: 4px !important; }
+article.product-row .price        { text-align: right; padding-right: 20px !important; }
+article.product-row .availability-box { text-align: right; padding-left: 20px !important; }
 article.product-row.variation.row > .price        { text-align: right; }
 article.product-row.variation.row > .availability-box { text-align: right; }
 
